# MckFx

./: .gitignore  .gitmodules  CMakeLists.txt  MckDelay.jucer  README.md
Source/: BwLookAndFeel.cpp  Control.h  DelayModule.cpp  DelayModule.hpp  MckLookAndFeel.cpp  MckLookAndFeel.h  MckLookAndFeel.hpp  PluginEditor.cpp  PluginEditor.h  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  SampleDelay.cpp  SampleDelay.hpp
Source/Delay/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
Source/Dsp/: LfoModule.cpp  LfoModule.hpp
Source/Trem/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
Source/Types/: Control.hpp
